# pmanager

./: .gitignore  Cargo.toml  Default.toml  Development.toml  Dockerfile  Dockerfile_migrations  README.md  results.xml
.github/: dependabot.yml
.github/workflows/: build.yml  test.yaml
api/: Cargo.toml
api/src/: files.rs
app_config/: Cargo.toml  Default.toml  Development.toml
app_config/src/: lib.rs
application/: Cargo.toml
application/src/: files.rs  lib.rs
config/: Cargo.toml  Default.toml
config/src/: lib.rs
domain/: Cargo.toml
domain/src/: file_object.rs  lib.rs  resource.rs  storage.rs  user.rs
integration_tests/: Cargo.toml  test_file.txt
integration_tests/src/: main.rs
integration_tests/tests/: repository.rs  storage.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220302_000001_create_user_table.rs  m20220430_000001_create_resource_table.rs  main.rs
remote/: Cargo.toml
remote/src/: lib.rs  s3.rs
repo/: Cargo.toml
repo/entity/: Cargo.toml
repo/entity/src/: lib.rs  user.rs
repo/migration/: Cargo.toml
repo/migration/src/: lib.rs  m20220302_000001_create_user_table.rs
repository/: Cargo.toml
repository/entity/: Cargo.toml
repository/entity/src/: lib.rs  resource.rs  user.rs
repository/src/: lib.rs  resource.rs  user.rs
src/: main.rs
tests/: Cargo.toml
tests/tests/: repository.rs  storage.rs
