[package]
name = "personal-manager"
version = "0.1.0"
edition = "2021"
authors = ["Igor Merkushev <geek.space@ya.ru>"]

[workspace]
members = [".", "config", "repository", "tasks", "util", "migration", "domain", "application", "remote"]

[dependencies]
# web
tokio = { version = "1", features = ["full"] }
axum = { version = "0" }
tower = "0.4"
tower-http = { version = "0", features = ["fs"] }
tower-cookies = { version = "0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# json
serde = "1"
serde_json = "1"

# error
anyhow = "1"

# config
dotenv = "0.15"

#static
lazy_static = "1.4"

#log
log = "0.4"
fast_log = { version="1", features = ["lz4","zip", "gzip"]}
derive_more = "0.99"

#jwt
jsonwebtoken = "8"

#snowflake
rustflake = "0.1"
md5 = "0.7"
yaml-rust = "0.4"

#captcha
captcha = "0.0.8"

#http client,use rust-tls
reqwest = { version = "0.11",default-features = false, features = ["json","rustls-tls", "multipart"] }

#image code
image = "0"

#async trait
async-trait = "0.1"

# context initialization
once_cell = "1.8"

#testing
mockall = "0"
testcontainers = "0"