[package]
name = "assets"
version = "0.1.0"
edition = "2021"
authors = ["Igor Merkushev <geek.space@ya.ru>"]

[workspace]
members = [
    ".", 
    "app_config", 
    "repository", 
    "tasks", 
    "util", 
    "migration", 
    "domain", 
    "application", 
    "remote", 
    "tests", 
    "api"
]

[dependencies]
api = { path = "api" }
app_config = { path = "app_config" }


# web
axum = { version = "0", features = ["multipart", "headers", "json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
tower-http = { version = "0", features = ["trace"] }

# db
sea-orm = { version = "0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros", "mock", "with-uuid" ], default-features = false }

# errors
anyhow = "1"

#async-trait
async-trait = "0"

#log
log = "0.4"
fast_log = { version="1", features = ["lz4","zip", "gzip"]}
derive_more = "0"
env_logger = "0"

# dependabot
lock_api = "0"