[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
application = { path = "../application" }
domain = { path = "../domain" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0", features = ["multipart", "headers", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
headers = "0"
jsonwebtoken = "8"
once_cell = "1"
mime = "0"

# errors
anyhow = "1"

#async-trait
async-trait = "0"

#log
log = "0.4"
fast_log = { version="1", features = ["lz4","zip", "gzip"]}
derive_more = "0"

[dev-dependencies]
reqwest = { version = "0", default-features = false, features = ["json", "stream", "multipart"] }
axum-test-helper = "0"
mockall = "0"
test-log = "0"
env_logger = "0"