[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
application = { path = "../application" }
domain = { path = "../domain" }
app_config = { path = "../app_config" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0", features = ["multipart", "headers", "json"] }
tower = "0.4"
axum-macros = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
headers = "0"
jsonwebtoken = "8"
once_cell = "1"
mime = "0"
bytes = "1"

# db
sea-orm = { version = "0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros", "mock", "with-uuid" ], default-features = false }

# errors
anyhow = "1"

#async-trait
async-trait = "0"

#log
log = "0.4"
fast_log = { version="1", features = ["lz4","zip", "gzip"]}
derive_more = "0"

[dev-dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "multipart"] }
axum-test-helper = "0"
tower = { version = "0", features = ["util"] }
mockall = "0"
test-log = "0"
env_logger = "0"