[package]
name = "domain"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# db
uuid = { version = "0", features = ["serde", "v4"]}
chrono = { version = "0.4", features = ["serde"] }

#async trait
async-trait = "0.1"

#errors
anyhow = "1"