[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "repository"
path = "tests/repository.rs"

[[test]]
name = "storage"
path = "tests/storage.rs"


[dependencies]
domain = { path = "../domain" }
remote = { path = "../remote" }
config = { path = "../config" }
repository = { path = "../repository" }
migration = { path = "../migration" }

tokio = { version = "1", features = ["full"] }
futures = "0"

#static
lazy_static = "1"

#log
log = "0"
derive_more = "0"
pretty_env_logger = "0"
fast_log = { version="1", features = ["lz4","zip", "gzip"]}

aws-config = "0"
aws-sdk-s3 = "0"
aws-types = {version = "0",  features = ["hardcoded-credentials"]}
aws-smithy-http = "0"
aws-smithy-types = "0"

#db
sea-orm = { version = "0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros", "mock", "with-uuid" ], default-features = false }
sea-schema = { version = "0", default-features = false, features = [ "migration", "debug-print" ] }

# db
uuid = { version = "1", features = ["serde", "v4"]}
chrono = { version = "0", features = ["serde"] }
tera = "1"

#async trait
async-trait = "0"

# errors
anyhow = "1"

#mocks
mockall = "0"

# context initialization
once_cell = "1"

#testing
ctor = "0"
testcontainers = "0"
test-log = "0"
env_logger = "0"
tracing = {version = "0", default-features = false}
tracing-subscriber = {version = "0", default-features = false, features = ["env-filter", "fmt"]}