[package]
name = "migration"
version = "0.1.0"
edition = "2021"


[dependencies]
sea-schema = { version = "0", default-features = false, features = [ "migration", "debug-print" ] }
entity = { path = "../repository/entity" }

tokio = { version = "1", features = ["full"] }

# context
once_cell = "1"

# logger
log = "0.4"
fast_log = { version="1.3", features = ["lz4","zip", "gzip"]}
pretty_env_logger = "0"

[dev-dependencies]
testcontainers = "0"