[package]
name = "migration"
version = "0.1.0"
edition = "2021"


[dependencies]
sea-schema = { version = "0", default-features = false, features = [ "migration", "debug-print" ] }
entity = { path = "../repository/entity" }

tokio = { version = "1", features = ["full"] }

# logger
pretty_env_logger = "0"
