[package]
name = "migration"
version = "0.1.0"
edition = "2021"


[dependencies]
sea-schema = { version = "0", default-features = false, features = ["debug-print" ] }
sea-orm-migration = "0"
entity = { path = "../repository/entity" }

tokio = { version = "1", features = ["full"] }

# logger
dotenv = "0"
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }