[package]
name = "repo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]

#db migrations
sea-orm = { version = "0.6", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros", "mock", "with-uuid" ], default-features = false }
entity = { path = "entity" }

# db
uuid = { version = "0.8", features = ["serde", "v4"]}
chrono = { version = "0.4", features = ["serde"] }
tera = "1"