[package]
name = "repository"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0"
#static
lazy_static = "1"

#log
log = "0"
derive_more = "0"
pretty_env_logger = "0"
fast_log = { version="1", features = ["lz4","zip", "gzip"]}

#db
sea-orm = { version = "0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros", "mock", "with-uuid" ], default-features = false }
sea-schema = { version = "0", default-features = false, features = [ "migration", "debug-print" ] }
entity = { path = "entity" }
migration = { path = "../migration" }
domain = { path = "../domain" }

# db
uuid = { version = "0", features = ["serde", "v4"]}
chrono = { version = "0", features = ["serde"] }
tera = "1"

#async trait
async-trait = "0"

# errors
anyhow = "1"

#mocks
mockall = "0"

# context initialization
once_cell = "1"

[dev-dependencies]
#testing
testcontainers = "0"
test-log = "0"
env_logger = "0"
tracing = {version = "0", default-features = false}
tracing-subscriber = {version = "0", default-features = false, features = ["env-filter", "fmt"]}