[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
domain = { path = "../../domain" }
serde = { version = "1.0.56", features = ["derive"] }
serde_json = "1"

# db
uuid = { version = "0", features = ["serde", "v4"]}
chrono = { version = "0.4", features = ["serde"] }

[dependencies.sea-orm]
version = "0"
features = [
  "macros",
  "debug-print",
  "runtime-tokio-native-tls",
  "sqlx-postgres",
  "with-uuid"
]
default-features = false